--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,87 +1,97 @@
 .sidebar {
-    flex: 1; 
-    border-right: 0.5px solid rgb(230, 227, 227);  
-    min-height: 100vh;
-    background-color: white;
+  flex: 1;
+  border-right: 0.5px solid rgb(230, 227, 227);
+  min-height: 100vh;
+  background-color: white;
 
-    .top {
-        height: 50px;
+  .top {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .logo {
+      font-size: 20px;
+      font-weight: bold;
+      color: #6439ff;
+    }
+  }
+
+  hr {
+    height: 0;
+    border: 0.5px solid rgb(230, 227, 227);
+  }
+
+  .center {
+    padding-left: 10px;
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      .title {
+        font-size: 13px;
+        font-weight: bold;
+        color: #999;
+        margin-top: 15px;
+      }
+
+      li {
         display: flex;
-        justify-content: center;
         align-items: center;
+        font-size: 18px;
+        cursor: pointer;
 
-        .logo {
-            font-size: 20px;
-            font-weight: bold;
-            color: #6439ff
+        button {
+          padding: 5px;
+          border: none;
+          background: transparent;
+          cursor: pointer;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          height: 100%;
         }
-    }
 
-    hr {
-        height: 0;
-        border: 0.5px solid rgb(230, 227, 227);  
-    }
-
-    .center {
-        padding-left: 10px;
-
-        ul {
-            list-style: none;
-            margin: 0; 
-            padding: 0;
-
-            .title {
-                font-size: 13px; 
-                font-weight: bold; 
-                color: #999;
-                margin-top: 15px;
-            }
-
-            li {
-                display: flex;
-                align-items: center;
-                padding: 5px; 
-                font-size: 18px;
-                cursor: pointer;
-
-                &:hover {
-                    background: #ece8ff
-                }
-
-                .icon {
-                    font-size: 22px; 
-                    color: #7451f8;
-                }
-
-                span {
-                    font-size: 15px; 
-                    font-weight: 600;
-                    color: #888;
-                    margin-left: 10px;
-                }
-            }
+        &:hover {
+          background: #ece8ff;
         }
-    }
 
-    .bottom {
-        display: flex; 
-        align-items: center;
-        margin: 10px;
-
-        .colorOption {
-            width: 20px;
-            height: 20px;
-            border-radius: 5px; 
-            border: 1px solid #7451f8;
-            cursor: pointer; 
-            margin: 5px;
-
-            &:nth-child(1) {
-                background-color: whitesmoke;
-            }
-            &:nth-child(2) {
-                background-color: #333;
-            }
+        .icon {
+          font-size: 24px;
+          color: #7451f8;
         }
+
+        span {
+          font-size: 15px;
+          font-weight: 600;
+          color: #888;
+          margin-left: 10px;
+        }
+      }
     }
+  }
+
+  .bottom {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+
+    .colorOption {
+      width: 20px;
+      height: 20px;
+      border-radius: 5px;
+      border: 1px solid #7451f8;
+      cursor: pointer;
+      margin: 5px;
+
+      &:nth-child(1) {
+        background-color: whitesmoke;
+      }
+      &:nth-child(2) {
+        background-color: #333;
+      }
+    }
+  }
 }
