--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,14 @@
 .home {
-    display: flex; 
+  display: flex;
 
-    .homeContainer {
-        flex: 6;
+  .homeContainer {
+    flex: 6;
+
+    .widgets {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 20px; 
+      gap: 20px;
     }
+  }
 }
