--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,15 +4,30 @@
   .homeContainer {
     flex: 6;
 
-    .widgets, .charts {
+    .widgets,
+    .charts {
       display: flex;
       flex-wrap: wrap;
-      padding: 20px; 
+      padding: 20px;
       gap: 20px;
     }
 
     .charts {
       padding: 5px 20px;
+    }
+
+    .listContainer {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 10px rgba(201, 201, 201, 0.47);
+      padding: 20px;
+      margin: 20px; 
+      border-radius: 5px;
+
+      .listTitle {
+        font-weight: 500;
+        color: gray; 
+        margin-bottom: 50px;
+      }
     }
   }
 }
