--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,16 +1,58 @@
 .datatable {
-    padding: 20px;
+  padding: 20px;
 
-    .cellWithImg {
-        display: flex;
-        align-items: center;
+  .cellWithImg {
+    display: flex;
+    align-items: center;
 
-        .cellImg {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-right: 20px;
-        }
+    .cellImg {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 20px;
     }
+  }
+
+  .cellWithStatus {
+    padding: 5px;
+    border-radius: 5px;
+
+    &.active {
+      color: green;
+      background-color: rgba(0, 128, 0, 0.05);
+    }
+
+    &.pending {
+      color: goldenrod;
+      background-color: rgba(255, 217, 0, 0.05);
+    }
+
+    &.passive {
+      color: crimson;
+      background-color: rgba(255, 0, 0, 0.05);
+    }
+  }
+
+  .cellAction {
+    display: flex; 
+    align-items: center;
+    gap: 15px; 
+
+    .viewButton {
+        padding: 2px 5px; 
+        border-radius: 5px; 
+        color: darkblue; 
+        border: 1px dotted rgba(0, 0, 139, 0.6);
+        cursor: pointer;
+    }
+
+    .deleteButton {
+        padding: 2px 5px; 
+        border-radius: 5px; 
+        color: crimson; 
+        border: 1px dotted rgba(220, 20, 60, 0.6);
+        cursor: pointer;
+    }
+  }
 }
