some changes, finish single component

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -1,16 +1,19 @@
 .chart {
-    flex: 4;
-    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47); 
-    box-shadow: 2px 4px 10px 10px rgba(201, 201, 201, 0.47);
-    padding: 13px;
-    color: gray; 
-    border-radius: 5px; 
+  flex: 4;
+  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  border-radius: 10px;
+  padding: 13px;
+  color: gray;
+  border-radius: 5px;
 
-    .title {
-        margin-bottom: 20px;
-    }
+  .title {
+    margin-bottom: 20px;
+    color: #999 !important;
+    
+  }
 
-    .chartGrid {
-        stroke: rgb(228, 225, 225)
-    }
+  .chartGrid {
+    stroke: rgb(228, 225, 225);
+  }
 }
