--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -13,7 +13,7 @@
       .left {
         flex: 1;
         padding: 13px;
-        -webkit-box-shadow: 2px 4px 10px 1px rgbg(0, 0, 0, 0.47);
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
         box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
         border-radius: 10px;
         position: relative;
@@ -67,7 +67,15 @@
         flex: 2;
       }
     }
-  }
+
+    .bottom {
+        padding: 20px;
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+         border-radius: 10px;
+        margin: 10px 20px;
+    }
+}
 
   .title {
     font-size: 18px;
