--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -42,8 +42,9 @@
         align-items: center;
         font-size: 18px;
         cursor: pointer;
+        padding: 5px;
 
-        button {
+        a, button {
           padding: 5px;
           border: none;
           background: transparent;
