--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -4,12 +4,19 @@
   min-height: 100vh;
   background-color: white;
 
+  .isActive {
+    li {
+
+      background: #ece8ff !important;
+    }
+  }
+
   .top {
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     .logo {
       font-size: 20px;
       font-weight: bold;
@@ -21,15 +28,15 @@
     height: 0;
     border: 0.5px solid rgb(230, 227, 227);
   }
-
+  
   .center {
     padding-left: 10px;
-
+    
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
-
+      
       .title {
         font-size: 13px;
         font-weight: bold;
@@ -43,7 +50,7 @@
         font-size: 18px;
         cursor: pointer;
         padding: 5px;
-
+        
         a, button {
           padding: 5px;
           border: none;
@@ -54,16 +61,16 @@
           align-items: center;
           height: 100%;
         }
-
+        
         &:hover {
           background: #ece8ff;
         }
-
+        
         .icon {
           font-size: 24px;
           color: #7451f8;
         }
-
+        
         span {
           font-size: 15px;
           font-weight: 600;
@@ -73,7 +80,7 @@
       }
     }
   }
-
+  
   .bottom {
     display: flex;
     align-items: center;
@@ -86,7 +93,7 @@
       border: 1px solid #7451f8;
       cursor: pointer;
       margin: 5px;
-
+      
       &:nth-child(1) {
         background-color: whitesmoke;
       }
@@ -96,3 +103,4 @@
     }
   }
 }
+
