ant notifications needs to be compoleted

--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -9,12 +9,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+        
     .link {
       text-decoration: none;
       color: green;
       font-size: 18px;
-      font-weight: 400;
+      font-weight: bold;
       border: 1px solid green;
       padding: 8px;
       border-radius: 5px;
