work on user update

--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -68,6 +68,14 @@
       cursor: pointer;
     }
 
+    .editButton {
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: rgb(160, 190, 6);
+      border: 1px dotted rgba(140, 161, 2, 0.6);
+      cursor: pointer;
+    }
+
     .deleteButton {
       padding: 2px 5px;
       border-radius: 5px;
