--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -61,6 +61,7 @@
 
         .viewButton,
         .deleteButton,
+        .editButton,
         .cellWithStatus {
             color: gray;
             border: none;
