--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,34 +1,90 @@
-.login {
-    height: 100vh;
+.loginMain {
+  height: 100vh;
+  .login {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    zoom: 1.3;
 
-    form {
+    .loginTxt {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+
+      .copyRow {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        input {
-            width: 200px; 
-            height: 30px;
-            margin: 10px;
+        gap: 10px;
+        justify-content: center;
+        position: relative;
+        margin-top: 10px;
+        img {
+          width: 20px;
         }
 
         button {
-            width: 200px;
-            height: 30px;
-            border: none;
-            background-color: purple;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
+          border: none;
+          background: transparent;
+          cursor: pointer;
+          position: absolute;
+          right: -35px;
+          top: -5px;
         }
 
-        span {
-            font-size: 14px;
-            color: red;
-            margin-top: 15px;
+        .status {
+          position: absolute;
+          right: -90px;
+          background: rgb(179, 245, 185);
+          padding: 4px;
+          font-size: 14px;
+          top: -5px;
+          border-radius: 10px 10px 10px 0;
+          opacity: 0;
+          animation: toHide 3s ease-in alternate;
         }
+      }
     }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+
+      input {
+        width: 200px;
+        height: 30px;
+        margin: 10px;
+      }
+
+      button {
+        width: 210px;
+        height: 30px;
+        border: none;
+        background-color: purple;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+
+      span {
+        font-size: 14px;
+        color: red;
+        margin-top: 15px;
+      }
+    }
+  }
 }
+
+@keyframes toHide {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
