--- a/src/pages/update/update.scss
+++ b/src/pages/update/update.scss
@@ -23,7 +23,7 @@
           flex: 1;
           text-align: center;
   
-          img {
+          .photo {
             width: 100px;
             height: 100px;
             border-radius: 50%;
