--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    zoom: 1.3;
+    // zoom: 1.3;
 
     .loginTxt {
       display: flex;
