--- a/src/components/goBackBtn/goBack.scss
+++ b/src/components/goBackBtn/goBack.scss
@@ -4,6 +4,10 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
     -webkit-box-shadow: -1px 1px 7px -1px rgba(158, 156, 158, 1);
     -moz-box-shadow: -1px 1px 7px -1px rgba(158, 156, 158, 1);
     box-shadow: -1px 1px 7px -1px rgba(158, 156, 158, 1);
