--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -20,13 +20,12 @@
       }
 
       .left {
-        flex: 1;
         text-align: center;
         display: flex;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: space-around;
         gap: 20px;
-
+        
         .photo {
           width: 100px;
           height: 100px;
